# exercise_3d

./: .gitignore  pyproject.toml
src/: __init__.py
src/task1_augmentation/: load_data.py  torch_augment.py
src/task2_classification/: model.py
src/task3_generation/: notes
