[tool.poetry]
name = "anything-world"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.10.0"
pymeshlab = "^2022.2.post2"
numpy = "^1.24.1"
#torch = { version = "1.12.1+cu116", source = "torchcu116" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[[tool.poetry.source]]
#name = "torchcu116"
#url = "https://download.pytorch.org/whl/cu116"
#default = false
#secondary = false
